--- a/templates/_header.mustache
+++ b/templates/_header.mustache
@@ -55,8 +55,8 @@
         <div class="nav-collapse collapse">
         <ul class="nav">
           <li id="home" {{#home}}class="active"{{/home}}><a href="/">Home</a><span></span></li>
-          <li id="wiki" {{#wiki}}class="active"{{/wiki}}><a href="/wiki/Overview.html">Documentation</a><span></span></li>
-          <li id="support" {{#support}}class="active"{{/support}}><a href="/support.html">Support</a><span></span></li>
+          <!--li id="wiki" {{#wiki}}class="active"{{/wiki}}><a href="/wiki/Overview.html">Documentation</a><span></span></li>
+          <li id="support" {{#support}}class="active"{{/support}}><a href="/support.html">Support</a><span></span></li-->
         </ul>
       </div>
     </div>
