--- a/templates/_layout.mustache
+++ b/templates/_layout.mustache
@@ -6,17 +6,15 @@
         <div class="span9">
             {{{contents}}}
         </div>
+        <!-- sidebar -->
         <div class="span3 sidemenu">
-        <ul>
-          {{#sla}}
-          <li><a href="/security.html">Support</a></li>
-          {{/sla}}
-          <li><a href="/wiki/Overview.html">Documentation</a></li>
-          <li><a href="/wiki/Frequent_Questions.html">Frequent Questions</a></li>
-          <li><a href="https://answers.atlassian.com/tags/addon-lambda-plugin-ondemand/" target="blank">Atlassian Answers</a><i class="icon-external-link"></i></li>
-          <li><a href="https://bitbucket.org/azhdanov/lambda-plugin/issues?status=new&status=open" target="blank">Issues</a><i class="icon-external-link"></i></li>
-        </ul>
-	    </div>
+          <a href="https://marketplace.atlassian.com/plugins/lambda-plugin"><img src="/images/marketplace_available_light_180x80.png" title="Available on the Atlassian Marketplace" alt="Available on the Atlassian Marketplace"/></a>
+          <ul>
+            <li><a href="/security.html">Security Statement</a></li>
+            <li><a href="https://bitbucket.org/azhdanov/jiratimesheet/issues?status=new&status=open&component=Time%20Reports" target="blank">Issues</a><i class="icon-external-link"></i></li>
+          </ul>
+        </div>
+      <!-- /sidebar -->
 	  </div>
     </section>
   </div>
