--- a/templates/_footer.mustache
+++ b/templates/_footer.mustache
@@ -28,8 +28,7 @@
         <div class="footer-list">
           <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/wiki/Overview.html">Documentation</a></li>
-            <li><a href="/support.html">Support</a></li>
+            <li><a href="/wiki/Examples.html">Documentation</a></li>
           </ul>
         </div>
       </div>
