--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -6,9 +6,9 @@
 
         <div class="slider-wrapper theme-default">
           <div id="slider" class="nivoSlider">
-            <img src="/images/timereports-timesheet.png" data-thumb="images/timereports-timesheet.png" alt="Time Sheet Report"/>
-            <img src="/images/timereports-pivot.png" data-thumb="images/timereports-pivot.png" alt="Pivot Time Report"/>
-            <img src="/images/timereports-planned-vs-actual.png" data-thumb="images/timereports-planned-vs-actual.png" alt="Planned vs Actual Time Report" />
+            <img src="/images/lambda-search.png" data-thumb="images/lambda-search.png" alt="Issue filter with expression column"/>
+            <img src="/images/lambda-column.png" data-thumb="images/lambda-column.png" alt="Define column"/>
+            <img src="/images/lambda-column-new.png" data-thumb="images/lambda-column-new.png" alt="Create new column" />
             </div>
         </div>
       </div>
